# hw6-drf-python7

./: pyproject.toml  setup.cfg
apps/cars/: models.py  serializers.py  urls.py  views.py
apps/configs/extra_conf/: rest_conf.py
apps/core/services/: upload_avatar.py
apps/users/: 1urls.py  models.py  urls.py  views.py
apps/users/IsAdminUser/: urls.py  views.py
apps/users/IsSuperUser/: urls.py  views.py
